static/style.css
html, body {
    padding: 0;
    margin: 0;
    font-family: Verdana, 'DejaVu Sans', 'Bitstream Vera Sans', Geneva, sans-serif;
    font-size: 16px;
    
    display: flex;
    flex-direction: column;
    
    height: 100%;
    width: 100%;
}

@media screen and (max-width: 680px) {
    #userlist {
        display: none;
    }
    #userswitch {
        display: inline !important;
        margin-right: -3px;
    }

    td:first-child {
        min-width: 120px !important;
    }
}

@media screen and (max-width: 900px) {
    td:last-child {
        display: none;
    }
}

header {
    font-size: 24px;
    border-bottom: 1px solid #666;
    /*background: url(https://s-media-cache-ak0.pinimg.com/736x/bc/5a/cc/bc5acc408011acf4e67be22002ad55ad.jpg);*/
}

#nom {
    padding: 20px;
}

#sidebtns {
    float: right;
    font-size: 32px;
    padding: 17px;
    padding-top: 16px;
    padding-bottom: 14px;
    margin-right: 5px;
}
#sidebtns img {
    margin-left: 5px;
}

input[type=range] {
    vertical-align: middle;
    margin-left: 5px;
    width: 147px;
}

main {
    display: flex;
    height: 100%;
    min-height: 0;
}

#chat {
    flex: 1;
    background: #f5f5f5;
    
    display: flex;
    flex-direction: column;
    
    min-width: 0;
}

#chatbox {
    flex: 1;
    overflow-y: auto;
}

#chatentry {
    display: flex;
    min-height: 50px;
}

#input {
    flex: 1;
    font-size: 30px;
    padding: 6px 0px;
    min-width: 0;
}

table {
    border-collapse: collapse;
    word-break: break-all;
}

td {
    height: 34px;
}

tr:nth-child(odd) {
    background: #eeeeee;
}

td:not(:last-child) {
    border-right: 1px dotted #666;
}

td:not(:nth-child(2)) {
    white-space: nowrap;
    padding: 0 5px;
    padding-bottom: 2px;
    text-align: right;
}

td:first-child {
    padding-left: 15px;
    min-width: 150px;
}

td:nth-child(2) {
    width: 99%;
    padding: 1px 6px;
    line-height: 1.5em;
}

#userlist {
    border-left: 1px solid #666;
    overflow-y: auto;
}

#userlist > div {
    padding: 0 5px;
    padding-bottom: 2px;
    width: 175px;
    border-bottom: 1px solid #666;
}

.sound {
    float: right;
    font-size: 24px;
    padding: 0 10px;
    padding-left: 0;
    position: relative;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
    color: #333;
    top: 3px;
}

.mute > * {
    opacity: 0.4;
}

#userswitch {
    display: none;
}

a {
    color: #0046A6;
    text-decoration: none;
}

a:hover, .sound:hover, #sidebtns > img:hover, input[type=range]:hover, input[type=button]:hover,
input[type=checkbox]:hover, input[type=checkbox]:hover + label, #close:hover {
    opacity: 0.7;
    cursor: pointer;
}

label {
    cursor: inherit;
}

@media screen and (-webkit-min-device-pixel-ratio:0) {
    input[type=button] {
        padding: 5px;
    }
}

.mute .sound:hover {
    opacity: 0.28;
}

img {
    margin-top: -2px;
}

main label {
    position: relative;
    top: -6px;
}

img + label {
    /*left: -2px;*/
}

label + img {
    margin-left: -2px;
}

.log {
    color: limegreen;
}

.part {
    color: #0DACCD;
    /*color: #0DC0E5;*/
}

.kick {
    color: #FF3635; /* #CD0E0D; */
}

.backlog td {
    opacity: 0.4;
}

#overlay {
    display: none;
    color: #111;
    flex: 0;
}

#cover {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
}

#window {
    position: absolute;
    
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    
    max-width: 720px;
    max-height: 480px;
    
    margin: auto;
    padding: 50px;
    background: white;
    box-shadow: 0 0 15px #666;
    color: black;
    
    line-height: 1.5em;
    
    width: auto;
    height: auto;
}

@media screen and (max-width: 720px) {
    #window {
        padding: 40px;
        max-height: none;
    }
}

#window > * > div {
    margin-bottom: 24px;
}

#window, #window input {
    font-size: 24px;
}

#window a {
    text-decoration: underline;
}

#close {
    float: right;
    margin-top: -32px;
    margin-right: -30px;
    padding: 2px 10px;
    background: #eee;
}

#louspeak {
    margin-bottom: 20px !important;
}

